--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm:cli": "typeorm-ts-node-commonjs",
     "db:generate": "npm run typeorm:cli -- migration:generate -d src/config/orm-migration.config.ts src/database/migrations/%npm_config_name%",
-    "db:create": "npm run typeorm:cli -- migration:create src/database/migrations/$npm_config_name",
+    "db:create": "npm run typeorm:cli -- migration:create src/database/migrations/%npm_config_name%",
     "db:run": "npm run typeorm:cli -- migration:run -d src/config/orm-migration.config.ts",
     "db:revert": "npm run typeorm:cli -- migration:revert -d src/config/orm-migration.config.ts",
     "db:drop": "npm run typeorm:cli -- schema:drop -d src/config/orm-migration.config.ts",
@@ -39,12 +39,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "nestjs-telegraf": "^2.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.14.0",
     "typeorm": "^0.3.17",
     "typeorm-extension": "^3.0.2"
   },
